--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,6 @@ set_target_properties(chrono_example PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQ
 add_executable(statistics statistics.cpp)
 set_target_properties(statistics PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
 
+add_executable(test test.cpp)
+set_target_properties(test PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
+
